--- a/BlogHTML/index.html
+++ b/BlogHTML/index.html
@@ -1,1 +1,347 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="gb2312">
+<title>惠声惠色</title>
+<meta name="keywords" content="人网站-blog" />
+<meta name="description" content="惠的个人博客" />
+<link href="css/styles.css" rel="stylesheet">
+<link href="css/pl.css" rel="stylesheet">
+<!--[if lt IE 9]>
+<script src="js/modernizr.js"></script>
+<![endif]-->
+<style type="text/css">
+.blogitem ul.text{width:650px; height:510px; overflow:hidden; margin-bottom:25px;}
+</style>
+</head>
+<body>
+<header>
+ <nav id="nav">
+   <ul>
+    <li><a href="index.html" class="current1">网站首页</a></li>
+    <li><a href="photo.html" >相册</a></li>
+    <li><a href="story.html" >我的故事</a></li>
+    <li><a href="works.html">作品收藏</a></li>
+    <li><a href="music.html" >音乐</a></li>
+    <li><a href="contact.html" >留言交流</a></li>      
+    <li><a href="aboutme.html">关于我</a></li>
+   </ul>
+  <script src="js/silder.js"></script><!--获取当前页导航 高亮显示标题-->
+  
+ </nav>
+ </header>
+ <div class="mainContent">
+    <aside>
+      <div class="avatar">
+        <a href="#"><span>青轻飞扬</span></a>
+      </div>
+      <section class="topspaceinfo">
+        <h2>现在就是最好的时光</h2>
+        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我就是我，不一样的烟火......</p>
+      </section>
+      <div class="userinfo"> 
+        <p class="q-fans"> 粉丝：<a href="/" target="_blank">167</a></p> 
+        <p class="btns"><a href="/" target="_blank" >私信</a><a href="/" target="_blank">相册</a><a href="/" target="_blank">存档</a></p>   
+      </div>
+      <section class="newpic">
+         <h2>最新照片</h2>
+         <ul>
+           <li><a href="/"><img src="images/me1.jpg"></a></li>
+           <li><a href="/"><img src="images/me2.jpg"></a></li>
+           <li><a href="/"><img src="images/me3.jpg"></a></li>
+           <li><a href="/"><img src="images/me4.jpg"></a></li>
+           <li><a href="/"><img src="images/me5.jpg"></a></li>
+           <li><a href="/"><img src="images/me6.jpg"></a></li>
+           <li><a href="/"><img src="images/me7.jpg"></a></li>
+           <li><a href="/"><img src="images/me8.jpg"></a></li>
+         </ul>
+      </section>
+      <section class="taglist">
+         <h2>全部标签</h2>
+         <ul>
+           <li><a href="/">音乐</a></li>
+           <li><a href="/">程序猿</a></li>
+           <li><a href="/">学习ing</a></li>
+           <li><a href="/">旅游</a></li>
+        </ul>
+      </section>
+    </aside>
+    <div class="blogitem">
+      <article>
+        <h2 class="title"><a href="/">陌上花开，可缓缓归矣</a></h2>
+        <ul class="text">
+          <p>“陌上花开，可缓缓归矣。” 含义：（夫人），田间阡陌上的花开了，你可以一边赏花，一边慢慢地回来。</p>
+          <p>“陌上花开，如果没有悄然伫立阡陌并为陌上风情所陶醉的人，那么花开也寂寞，风情也苍白....”喜欢这句话，是因为看了忍冬的作品《陌上花开缓缓归》</p>
+          <p>阳春三月，风和日暖，信步城外，看阡陌之上的杨柳依依，野花绚烂，身心不由得轻爽而浪漫。“三月风情陌上花”，古远的诗句似乎随风从天边飘来，从历史的深处飘来，拂过阡陌，袭上心头，诗是属于清乾嘉诗人赵翼的，可昂首远望，眼前的陌上风情却是不折不扣的现代，由眼帘入心扉。</p>
+          <p class="textimg"><img src="images/text02.jpg"></p>
+          <p>漫步陌上，心情是诗意的那种，优雅而散淡，不惹匆促，只因陌上花开；花是自然的那种，朴素而恬淡，不落尘俗。“三月风情陌上花”，是花在其中生命得以璀璨，人在其中心情得以畅然的一种意境。三月陌上花，让人爱让人痴，恍惚人的骨子里头都沉淀了花的影子，花的风韵。</p>
+          <p>陌上花开，如果没有了从俗累的生活中走出来，悄然伫立阡陌并为陌上风情所陶醉的人，那么花开也寂寞，风情也苍白。于是，一句“陌上花开，可缓缓归矣”不知被多少人吟诵了多少遍。人归缓缓，那花便有灵性，便开得执著，陌上风情也被撩拨得浓郁而热烈。</p>
+          <p>缓缓归，缓缓归，披一袭“三月风情”，再采一束“陌上花”，缓缓归。</p>
+          <p>缓缓归矣，我心已是陌上花开。</p>
+        </ul>
+        <div class="textfoot">
+          <a href="javascript:viod(0)" class="all_text">阅读全文</a><a href="" class="pl-con" onClick="Show_Hidden(.blogitem .message)">评论</a><a href="#">转载</a>
+        </div>
+        <div class="message">
+            <p>我主张我飞扬</p>
+            <div class="edit" contenteditable="true"></div>
+            <div class="but">
+                 <img class="c_but" src="images/images/bba_thumb.gif">
+                 <div class="msg-but">评论</div>
+                 <div class="face">
+                 <ul>
+                     <li><img src="images/images/88_thumb.gif"></li>
+                     <li><img src="images/images/angrya_thumb.gif" /></li>
+                     <li><img src="images/images/bba_thumb.gif" /></li>
+                     <li><img src="images/images/boboshengmenqi_thumb.gif" /></li>
+                      <li><img src="images/images/bofubianlian_thumb.gif" /></li>
+                      <li><img src="images/images/bs_thumb.gif" /></li>
+                      <li><img src="images/images/bs2_thumb.gif" /></li>
+                      <li><img src="images/images/bz_thumb.gif" /></li>
+                      <li><img src="images/images/cake.gif" /></li>
+                      <li><img src="images/images/camera_thumb.gif" /></li>
+                      <li><img src="images/images/cat_yunqizhong_thumb.gif" /></li>
+                      <li><img src="images/images/cf_thumb.gif" /></li>
+                      <li><img src="images/images/chn_buyaoya_thumb.gif" /></li>
+                       <li><img src="images/images/cj_thumb.gif" /></li>
+                       <li><img src="images/images/clock_thumb.gif" /></li>
+                      <li><img src="images/images/come_thumb.gif" /></li>
+                      <li><img src="images/images/cool_thumb.gif" /></li>
+                      <li><img src="images/images/crazya_thumb.gif" /></li>
+                      <li><img src="images/images/cry.gif" /></li>
+                      <li><img src="images/images/cza_thumb.gif" /></li>
+                      <li><img src="images/images/daxiongleibenxiong_thumb.gif" /></li>
+                      <li><img src="images/images/dizzya_thumb.gif" /></li>
+                      <li><img src="images/images/fuyun_thumb.gif" /></li>
+                      <li><img src="images/images/gbzkun_thumb.gif" /></li>
+                      <li><img src="images/images/geili_thumb.gif" /></li>
+                      <li><img src="images/images/good_thumb.gif" /></li>
+                      <li><img src="images/images/gza_thumb.gif" /></li>
+                      <li><img src="images/images/h_thumb.gif" /></li>
+                      <li><img src="images/images/hatea_thumb.gif" /></li>
+                      <li><img src="images/images/hearta_thumb.gif" /></li>
+                      <li><img src="images/images/heia_thumb.gif" /></li>
+                      <li><img src="images/images/horse2_thumb.gif" /></li>
+                      <li><img src="images/images/hsa_thumb.gif" /></li>
+                      <li><img src="images/images/hufen_thumb.gif" /></li>
+                      <li><img src="images/images/j_thumb.gif" /></li>
+                      <li><img src="images/images/k_thumb.gif" /></li>
+                      <li><img src="images/images/kbsa_thumb.gif" /></li>
+                      <li><img src="images/kl_thumb.gif" /></li>
+                      <li><img src="images/images/laugh.gif" /></li>
+                      <li><img src="images/images/lazu_thumb.gif" /></li>
+                      <li><img src="images/images/ldln_thumb.gif" /></li>
+                      <li><img src="images/images/liwu_thumb.gif" /></li>
+                      <li><img src="images/images/lovea_thumb.gif" /></li>
+                      <li><img src="images/images/lxhluguo_thumb.gif" /></li>
+                      <li><img src="images/images/lxhzhuanfa_thumb.gif" /></li>
+                      <li><img src="images/images/m_thumb.gif" /></li>
+                      <li><img src="images/images/mb_thumb.gif" /></li>
+                      <li><img src="images/images/money_thumb.gif" /></li>
+                      <li><img src="images/images/nm_thumb.gif" /></li>
+                      <li><img src="images/images/no_thumb.gif" /></li>
+                      <li><img src="images/images/ok_thumb.gif" /></li>
+                      <li><img src="images/images/otm_thumb.gif" /></li>
+                      <li><img src="images/images/panda_thumb.gif" /></li>
+                      <li><img src="images/images/pig.gif" /></li>
+                      <li><img src="images/images/qq_thumb.gif" /></li>
+                      <li><img src="images/images/rabbit_thumb.gif" /></li>
+                      <li><img src="images/images/sad_thumb.gif" /></li>
+                      <li><img src="images/images/sada_thumb.gif" /></li>
+                      <li><img src="images/images/sb_thumb.gif" /></li>
+                      <li><img src="images/images/shamea_thumb.gif" /></li>
+                      <li><img src="images/images/sk_thumb.gif" /></li>
+                      <li><img src="images/images/sleepa_thumb.gif" /></li>
+                      <li><img src="images/images/sleepya_thumb.gif" /></li>
+                      <li><img src="images/images/smilea_thumb.gif" /></li>
+                      <li><img src="images/images/sw_thumb.gif" /></li>
+                      <li><img src="images/images/sweata_thumb.gif" /></li>
+                      <li><img src="images/images/t_thumb.gif" /></li>
+                      <li><img src="images/images/tootha_thumb.gif" /></li>
+                      <li><img src="images/images/tza_thumb.gif" /></li>
+                      <li><img src="images/images/unheart.gif" /></li>
+                      <li><img src="images/images/vw_thumb.gif" /></li>
+                      <li><img src="images/images/weijin_thumb.gif" /></li>
+                      <li><img src="images/images/wg_thumb.gif" /></li>
+                      <li><img src="images/images/wq_thumb.gif" /></li>
+                      <li><img src="images/images/x_thumb.gif" /></li>
+                      <li><img src="images/images/ye_thumb.gif" /></li>
+                      <li><img src="images/images/yhh_thumb.gif" /></li>
+                      <li><img src="images/images/youqian_thumb.gif" /></li>
+                      <li><img src="images/images/yw_thumb.gif" /></li>
+                      <li><img src="images/images/yx_thumb.gif" /></li>
+                      <li><img src="images/images/z2_thumb.gif" /></li>
+                      <li><img src="images/images/zhh_thumb.gif" /></li>
+                      <li><img src="images/images/zy_thumb.gif" /></li>
+                      <li><img src="images/images/zz2_thumb.gif" /></li>
+                 </ul>
+                 </div>
+            </div>
+        </div>
+        <div class="main">
+           <!-- <div class="msginfo">
+                 <dl>
+                    <dt><img src="images/01.jpg"></dt>
+                    <dd>微凉</dd>
+                 </dl>
+                 <div class="con"></div>
+            </div>-->
+         </div>
+      </article> 
+      <article>
+        <h2 class="title"><a href="/">岁月留痕——我的2010</a></h2>
+        <ul class="text">
+          <p>A面——岁月留痕之时光</p>
+          <p>每逢新旧年交替时候，我就被笼罩在一股茫然的思绪里，逃也逃不脱，避也避不开，唯有让心事在静静流逝的时光里苍茫成河。</p>
+          <p>是从什么时候开始的呢，我又变得如此感时伤怀？我很羡慕那些在年终盘点总结的人们，过去的一年于他们来说，是大刀阔斧的一年，是硕果累累的一年。再不济的话，也是豪情万丈的一年。而在我那逝去的时光里，平静如水，不起一丝波澜，一年又一年。我没有盘点，因为我没有波澜壮阔；我不会去总结，因为我的总结从来就没有逼近我的心灵。我知道这于我来说，显得多么无厘头。</p>
+          <p class="textimg"><img src="images/text01.jpg"></p>
+          <p>我喜欢这样安静地坐下来，想一些似有若无的心事。尽量不去想那些飞逝的时光，尽量不去想那些形色匆忙的脚步，似乎是在害怕，在这高速运转的时空里，自己有一天会化作一堆虚无。还记得那一部《岁月神偷》的电影吗？真是要感谢来自香港的导演罗启锐，影片给我们芸芸众生留下太多的唏嘘。在如水一般逝去的时光里，皱纹爬上你的眼角，白发蔓延我的双鬓。岁月才是最好的神偷，偷走了我的青春和你的美好。</p>
+          <p>就任这时光慢慢流淌吧，对于大多数人来说，我们无非就是浩瀚时空的一些微尘。虎年走了又怎样</p>
+        </ul>
+        <div class="textfoot">
+          <a href="javascript:void(0)" class="all_text">阅读全文</a><a href="/">评论</a><a href="/">转载</a>
+        </div>
+        <div class="message1">
+            <p>我主张我飞扬</p>
+            <div class="edit" contenteditable="true"></div>
+            <div class="but">
+                 <img class="c_but" src="images/images/bba_thumb.gif">
+                 <div class="msg-but">评论</div>
+                 <div class="face">
+                 <ul>
+                     <li><img src="images/images/88_thumb.gif"></li>
+                     <li><img src="images/images/angrya_thumb.gif" /></li>
+                     <li><img src="images/images/bba_thumb.gif" /></li>
+                     <li><img src="images/images/boboshengmenqi_thumb.gif" /></li>
+                      <li><img src="images/images/bofubianlian_thumb.gif" /></li>
+                      <li><img src="images/images/bs_thumb.gif" /></li>
+                      <li><img src="images/images/bs2_thumb.gif" /></li>
+                      <li><img src="images/images/bz_thumb.gif" /></li>
+                      <li><img src="images/images/cake.gif" /></li>
+                      <li><img src="images/images/camera_thumb.gif" /></li>
+                      <li><img src="images/images/cat_yunqizhong_thumb.gif" /></li>
+                      <li><img src="images/images/cf_thumb.gif" /></li>
+                      <li><img src="images/images/chn_buyaoya_thumb.gif" /></li>
+                       <li><img src="images/images/cj_thumb.gif" /></li>
+                       <li><img src="images/images/clock_thumb.gif" /></li>
+                      <li><img src="images/images/come_thumb.gif" /></li>
+                      <li><img src="images/images/cool_thumb.gif" /></li>
+                      <li><img src="images/images/crazya_thumb.gif" /></li>
+                      <li><img src="images/images/cry.gif" /></li>
+                      <li><img src="images/images/cza_thumb.gif" /></li>
+                      <li><img src="images/images/daxiongleibenxiong_thumb.gif" /></li>
+                      <li><img src="images/images/dizzya_thumb.gif" /></li>
+                      <li><img src="images/images/fuyun_thumb.gif" /></li>
+                      <li><img src="images/images/gbzkun_thumb.gif" /></li>
+                      <li><img src="images/images/geili_thumb.gif" /></li>
+                      <li><img src="images/images/good_thumb.gif" /></li>
+                      <li><img src="images/images/gza_thumb.gif" /></li>
+                      <li><img src="images/images/h_thumb.gif" /></li>
+                      <li><img src="images/images/hatea_thumb.gif" /></li>
+                      <li><img src="images/images/hearta_thumb.gif" /></li>
+                      <li><img src="images/images/heia_thumb.gif" /></li>
+                      <li><img src="images/images/horse2_thumb.gif" /></li>
+                      <li><img src="images/images/hsa_thumb.gif" /></li>
+                      <li><img src="images/images/hufen_thumb.gif" /></li>
+                      <li><img src="images/images/j_thumb.gif" /></li>
+                      <li><img src="images/images/k_thumb.gif" /></li>
+                      <li><img src="images/images/kbsa_thumb.gif" /></li>
+                      <li><img src="images/images/kl_thumb.gif" /></li>
+                      <li><img src="images/images/laugh.gif" /></li>
+                      <li><img src="images/images/lazu_thumb.gif" /></li>
+                      <li><img src="images/images/ldln_thumb.gif" /></li>
+                      <li><img src="images/images/liwu_thumb.gif" /></li>
+                      <li><img src="images/images/lovea_thumb.gif" /></li>
+                      <li><img src="images/images/lxhluguo_thumb.gif" /></li>
+                      <li><img src="images/images/lxhzhuanfa_thumb.gif" /></li>
+                      <li><img src="images/images/m_thumb.gif" /></li>
+                      <li><img src="images/images/mb_thumb.gif" /></li>
+                      <li><img src="images/images/money_thumb.gif" /></li>
+                      <li><img src="images/images/nm_thumb.gif" /></li>
+                      <li><img src="images/images/no_thumb.gif" /></li>
+                      <li><img src="images/images/ok_thumb.gif" /></li>
+                      <li><img src="images/images/otm_thumb.gif" /></li>
+                      <li><img src="images/images/panda_thumb.gif" /></li>
+                      <li><img src="images/images/pig.gif" /></li>
+                      <li><img src="images/images/qq_thumb.gif" /></li>
+                      <li><img src="images/images/rabbit_thumb.gif" /></li>
+                      <li><img src="images/images/sad_thumb.gif" /></li>
+                      <li><img src="images/images/sada_thumb.gif" /></li>
+                      <li><img src="images/images/sb_thumb.gif" /></li>
+                      <li><img src="images/images/shamea_thumb.gif" /></li>
+                      <li><img src="images/images/sk_thumb.gif" /></li>
+                      <li><img src="images/images/sleepa_thumb.gif" /></li>
+                      <li><img src="images/images/sleepya_thumb.gif" /></li>
+                      <li><img src="images/images/smilea_thumb.gif" /></li>
+                      <li><img src="images/images/sw_thumb.gif" /></li>
+                      <li><img src="images/images/sweata_thumb.gif" /></li>
+                      <li><img src="images/images/t_thumb.gif" /></li>
+                      <li><img src="images/images/tootha_thumb.gif" /></li>
+                      <li><img src="images/images/tza_thumb.gif" /></li>
+                      <li><img src="images/images/unheart.gif" /></li>
+                      <li><img src="images/images/vw_thumb.gif" /></li>
+                      <li><img src="images/images/weijin_thumb.gif" /></li>
+                      <li><img src="images/images/wg_thumb.gif" /></li>
+                      <li><img src="images/images/wq_thumb.gif" /></li>
+                      <li><img src="images/images/x_thumb.gif" /></li>
+                      <li><img src="images/images/ye_thumb.gif" /></li>
+                      <li><img src="images/images/yhh_thumb.gif" /></li>
+                      <li><img src="imagesimages//youqian_thumb.gif" /></li>
+                      <li><img src="images/images/yw_thumb.gif" /></li>
+                      <li><img src="images/images/yx_thumb.gif" /></li>
+                      <li><img src="images/images/z2_thumb.gif" /></li>
+                      <li><img src="images/images/zhh_thumb.gif" /></li>
+                      <li><img src="images/images/zy_thumb.gif" /></li>
+                      <li><img src="images/images/zz2_thumb.gif" /></li>
 
+                 </ul>
+                 </div>
+            </div>
+        </div>
+        <div class="main1">
+           <!-- <div class="msginfo">
+                 <dl>
+                    <dt><img src="images/01.jpg"></dt>
+                    <dd>微凉</dd>
+                 </dl>
+                 <div class="con"></div>
+            </div>-->
+         </div>
+      </article>
+      <div class="pages"><span>1</span><a href="/" hidefocus="">2</a><a href="/" hidefocus="">3</a><a href="/" class="next">下一页&gt;&gt;</a></div>
+      
+    </div>
+ </div>
+<footer>
+   <div class="footavatar">
+     <img src="images/me.jpg" class="footphoto">
+     <ul class="footinfo">
+       <p class="fname"><a href="/dancesmile" >青轻飞扬</a>  </p>
+       <p class="finfo">性别：女 年龄：25岁</p>
+       <p>现居：北京</p></ul>
+   </div>
+   <section class="visitor">
+     <h2>最近访客</h2>
+      <ul>
+        <li><a href="/"><img src="images/s0.jpg"></a></li>
+        <li><a href="/"><img src="images/s1.jpg"></a></li>
+        <li><a href="/"><img src="images/s2.jpg"></a></li>
+        <li><a href="/"><img src="images/s3.jpg"></a></li>
+        <li><a href="/"><img src="images/s5.jpg"></a></li>
+        <li><a href="/"><img src="images/s6.jpg"></a></li>
+        <li><a href="/"><img src="images/s7.jpg"></a></li>
+        <li><a href="/"><img src="images/s8.jpg"></a></li>
+      </ul>
+   </section>
+   <div class="Copyright">
+     <ul>
+       <a href="/">帮助中心</a><a href="/">空间客服</a><a href="/">投诉中心</a><a href="/">空间协议</a>
+     </ul>
+     <p>Design by Xiaohui</p>
+   </div>
+ </footer>
+ <script src="js/jquery-1.10.2.min.js"></script>
+ <script type="text/javascript" src="js/alltext.js"></script><!--评论弹出-->
+ <script type="text/javascript" src="js/pl.js"></script>
+</body>
+</html>
